--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>MEMORIES.</p>
 
 <img src="./img/1.JPG">
-<img src="./img/5.jpg">
+<img src="./img/5.JPG">
 <img src="./img/4.JPG">
 <img src="./img/6.jpeg">
 <img src="./img/3.jpeg">
